--- a/RockWeb/Styles/_rock-core.less
+++ b/RockWeb/Styles/_rock-core.less
@@ -1,18 +1,39 @@
 /*
-
   Rock's Core CSS
-
   1. Imports - Used to import the various core less files
   2. HTML Overrides - Style overrides for basic HTML tags
   3. Utility Classes - Classes that we use often to keep from writing from repeating ourselves
   4. Bootstrap Overrides - When Bootstrap gets it wrong, we make it right
   5. ASP.Net Overrides - Yep they get it wrong too sometimes
-
 */
 
+:root {
+  --text-color: @text-color;
+  --link-color: @link-color;
+  --link-color-hover: @link-hover-color;
+  --body-background: @body-bg;
+  --brand-primary: @brand-primary;
+  --brand-success: @brand-success;
+  --brand-info: @brand-info;
+  --brand-warning: @brand-warning;
+  --brand-danger: @brand-danger;
+
+  --input-bg: @input-bg;
+  --input-color: @input-color;
+  --input-color-placeholder: @input-color-placeholder;
+  --input-border: 1px solid @input-border;
+  --input-border-radius: @input-border-radius;
+  --input-focus-transition: @input-focus-transition;
+
+  --focus-state-border: 1px solid @input-border-focus;
+  --focus-state-shadow: @input-focus-box-shadow;
+
+  --font-family-sans-serif: @font-family-sans-serif;
+}
 
 // 1. Imports
 //--------------------------------
+@import (reference) "./Bootstrap/bootstrap.less";
 @import "_rock-mixins.less";
 @import "./FontAwesome/mixins.less";
 @import "./FontAwesome/variables.less";
