added javascript to site.master to open all external links in new tabs

--- a/RockWeb/Themes/NewSpring/Layouts/Site.Master
+++ b/RockWeb/Themes/NewSpring/Layouts/Site.Master
@@ -165,6 +165,20 @@
                     </ProgressTemplate>
             </asp:UpdateProgress>
 
+            <script>
+                // Open all external links in a new tab
+                $('a').each(function() {
+                var a = new RegExp('/' + window.location.host + '/');
+                if(!a.test(this.href)) {
+                    $(this).click(function(event) {
+                        event.preventDefault();
+                        event.stopPropagation();
+                        window.open(this.href, '_blank');
+                    });
+                }
+                });
+            </script>
+
         </form>
 
     </body>
