updated js that opens offsite links in new tabs to not apply to a tags with an onclick attribute that isn't null

--- a/RockWeb/Themes/NewSpring/Layouts/Site.Master
+++ b/RockWeb/Themes/NewSpring/Layouts/Site.Master
@@ -166,16 +166,16 @@
             </asp:UpdateProgress>
 
             <script>
-                // Open all external links in a new tab
                 $('a').each(function() {
-                var a = new RegExp('/' + window.location.host + '/');
-                if(!a.test(this.href)) {
-                    $(this).click(function(event) {
-                        event.preventDefault();
-                        event.stopPropagation();
-                        window.open(this.href, '_blank');
-                    });
-                }
+                    var a = new RegExp('/' + window.location.host + '/');
+
+                    if(!a.test(this.href) && this.getAttribute('onclick') == null) {
+                        $(this).click(function(event) {
+                            event.preventDefault();
+                            event.stopPropagation();
+                            window.open(this.href, '_blank');
+                        });
+                    }
                 });
             </script>
 
