layout changes for giving

--- a/RockWeb/Themes/NewSpring/Styles/theme.less
+++ b/RockWeb/Themes/NewSpring/Styles/theme.less
@@ -9,6 +9,7 @@
 @import "../../../Styles/_rock-variables.less";
 @import "_variables";
 @import '_bootstrap-overrides';
+@import '_animations';
 @import '_layout';
 @import '_navigation';
 @import '_cards';
