updated giving schedules lava template to give users without schedules an action step, updated panel heading background color to be 303030 to match site nav/footer since it is more broadly used than 1c1c1c

--- a/RockWeb/Themes/NewSpring/Styles/_panels.less
+++ b/RockWeb/Themes/NewSpring/Styles/_panels.less
@@ -17,7 +17,7 @@
 }
 
 .panel-default > .panel-heading {
-	background-color: @gray-darker;
+	background-color: @gray-dark;
 	color: @white;
 	font-family: @font-family-sans-serif;
 	font-weight: 700;
