- Fixed Scheduled Transaction Edit block's payment method dropdown to be responsive.

--- a/RockWeb/Styles/_forms.less
+++ b/RockWeb/Styles/_forms.less
@@ -302,6 +302,16 @@ dl:not(.dl-horizontal) {
     float: left;
     margin-top: 8px;
   }
+
+  .form-group-auto & {
+    display: -ms-flexbox;
+    display: flex;
+
+    .form-control {
+      -ms-flex: 1 1 0;
+      flex: 1 1 0;
+    }
+  }
 }
 
 // change margins in panel headings
