--- a/RockWeb/Themes/NewSpring/Layouts/Site.Master
+++ b/RockWeb/Themes/NewSpring/Layouts/Site.Master
@@ -54,42 +54,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, maximum-scale=5">
 
         <!-- Libraries -->
-        <script src='<%# ResolveRockUrl("~~/Scripts/smooth-scroll.js", true) %>' ></script>
         <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js'></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.js"></script>
+        <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@15/dist/smooth-scroll.polyfills.min.js"></script>
         <script src='<%# ResolveRockUrl("~~/Scripts/layout.js", true) %>' ></script>
-        <script src='<%# ResolveRockUrl("~~/Scripts/append-query.js", true) %>' ></script>
-        <script src='<%# ResolveRockUrl("~~/Scripts/swiper.js", true) %>' ></script>
-        <script src='<%# ResolveRockUrl("~~/Scripts/navigation.js", true) %>' ></script>
-        <script src='<%# ResolveRockUrl("~~/Scripts/search.js", true) %>' ></script>
-
-        <script>
-            document.addEventListener("DOMContentLoaded", function(){
-                var navigation = document.querySelector('#zone-navigation');
-                if(navigation != null) {
-                    var navigationHeight = navigation.offsetHeight;
-                }
-
-                var header = document.querySelector('#navigation-secondary');
-                if(header != null) {
-                    var headerHeight = header.offsetHeight;
-                }
-
-                if (window.innerWidth > 667) {
-                    // Desktop
-                    offset = navigationHeight + headerHeight + 25 + "px";
-                } else {
-                    // Mobile
-                    offset = headerHeight + 10 + "px";
-                }
-
-                window.scroll = new SmoothScroll('a[data-scroll]', {
-                    speed: 500,
-                    speedAsDuration: true,
-                    offset: offset,
-                    easing: 'easeInOutCubic'
-                });
-            });
-        </script>
+        <script src='<%# ResolveRockUrl("~~/Scripts/theme.js", true) %>' ></script>
 
         <asp:ContentPlaceHolder ID="css" runat="server" />
 
